--- a/app/views/checkout/v1/spree/checkout/edit.html.slim
+++ b/app/views/checkout/v1/spree/checkout/edit.html.slim
@@ -13,11 +13,13 @@
               = image_tag 'logo/logo-mobile.svg', alt: 'Fame & Partners', width: '78', height: '59'
             ' Secure checkout
           ul.support-options.list-inline
-            li.live-chat
+            li
               a href='javascript:$zopim.livechat.window.show()'
-               ' Live Chat
-            li.support-telephone
-             = support_telephone
+                i.live-chat
+                ' Live Chat
+            li
+              i.support-telephone
+              = support_telephone
 
         .checkout-breadcrumbs
           ol.breadcrumb
