Password is not required

--- a/app/views/checkout/v1/spree/checkout/_email_login.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_email_login.html.slim
@@ -14,7 +14,7 @@ p Where should we send your receipt and tracking details?
       label
         | Email address *
       = text_field_tag 'email', nil, class: 'form-control form-control-md'
-      label Password *
+      label Password
       .input-group
         = text_field_tag 'password', nil, class: 'form-control form-control-md', type: 'password'
         span.input-group-btn
