Remove banner image on mobile
I remove banner image on mobile in collection page

--- a/app/views/products/collections/show.html.slim
+++ b/app/views/products/collections/show.html.slim
@@ -1,6 +1,6 @@
 = render :partial => 'javascript'
 
-.page-title.default.category-header style="background-image: url('#{@collection.details.banner.image}')"
+.page-title.default.category-header.hidden-xs style="background-image: url('#{@collection.details.banner.image}')"
   .container
     .page-title--details
       h1.no-padding-bottom = @collection.details.banner.title
