--- a/app/views/products/collections/show.html.slim
+++ b/app/views/products/collections/show.html.slim
@@ -1,10 +1,10 @@
 = render :partial => 'javascript'
 
-.page-title.default.category-header.hidden-xs style="background-image: url('#{@collection.details.banner.image}')"
+.page-title.default.category-header style="background-image: url('#{@collection.details.banner.image}')"
   .container
     .page-title--details
       h1.no-padding-bottom = @collection.details.banner.title
-      p= raw @collection.details.banner.subtitle
+      p.hidden-xs= raw @collection.details.banner.subtitle
 
 .page-content.products-collections.category
   = render :partial => 'filters'
