--- a/engines/style_quiz/app/views/style_quiz/questions/red_carpet_style.html.slim
+++ b/engines/style_quiz/app/views/style_quiz/questions/red_carpet_style.html.slim
@@ -1,21 +1,22 @@
 / Question 7/11
 .quiz-section id="#{ question.name }-question"
-  .quiz-section-title.quiz-section-title-blue
+  .quiz-section-window
+    .quiz-section-title.quiz-section-title-blue
+      .grid-container
+        h4.quiz-section-number Question #{ question_position }/#{ question_total }
+        h2 You’re walking the red carpet!
+        h3.font-family-secondary.text-uppercase WHICH DRESS WOULD YOU WEAR?
+        h4.font-family-secondary.text-uppercase - SELECT AS MANY AS YOU LIKE
     .grid-container
-      h4.quiz-section-number Question #{ question_position }/#{ question_total }
-      h2 You’re walking the red carpet!
-      h3.font-family-secondary.text-uppercase WHICH DRESS WOULD YOU WEAR?
-      h4.font-family-secondary.text-uppercase - SELECT AS MANY AS YOU LIKE
-  .grid-container
-    .quiz-catalog
-      .row.dress-style-wrapper
-        - question.answers.each do |answer|
-          .col-2.dress-style class=(@user_style_profile.selected?(answer) ? 'selected' : '') data-value=(answer.id)
-            .quiz-catalog-picture 
-              = image_tag answer.image
-              .checkmark.checkmark-lg
-    .row
-      .col-6.text-right = link_to 'Back', '#', class: 'btn btn-default btn-block', data: { action: 'previous' }
-      .col-6 = link_to 'Next', '#', class: 'btn btn-primary btn-block', data: { action: 'next' }
+      .quiz-catalog
+        .row.dress-style-wrapper
+          - question.answers.each do |answer|
+            .col-2.dress-style class=(@user_style_profile.selected?(answer) ? 'selected' : '') data-value=(answer.id)
+              .quiz-catalog-picture 
+                = image_tag answer.image
+                .checkmark.checkmark-lg
+      .row
+        .col-6.col-next = link_to 'Next', '#', class: 'btn btn-primary btn-block', data: { action: 'next' }
+        .col-6.col-prev.text-right = link_to 'Back', '#', class: 'btn btn-default btn-block', data: { action: 'previous' }
 / @end Question 7/11
 / ------------------
