--- a/engines/style_quiz/app/views/style_quiz/questions/sexyness_importance.html.slim
+++ b/engines/style_quiz/app/views/style_quiz/questions/sexyness_importance.html.slim
@@ -1,20 +1,21 @@
 / Question 9/11
 .quiz-section id="#{ question.name }-question"
-  .quiz-section-title.quiz-section-title-grey
+  .quiz-section-window
+    .quiz-section-title.quiz-section-title-grey
+      .grid-container
+        h4.quiz-section-number Question #{ question_position }/#{ question_total }
+        h2 Do you prefer to show some skin or cover up?
+        h3.font-family-secondary.text-uppercase RANK HOW SEXY YOU LIKE TO LOOK.
+        h4.font-family-secondary.text-uppercase - CLICK ON THE SCALE, FROM LEAST IMPORTANT TO VERY IMPORTANT
     .grid-container
-      h4.quiz-section-number Question #{ question_position }/#{ question_total }
-      h2 Do you prefer to show some skin or cover up?
-      h3.font-family-secondary.text-uppercase RANK HOW SEXY YOU LIKE TO LOOK.
-      h4.font-family-secondary.text-uppercase - CLICK ON THE SCALE, FROM LEAST IMPORTANT TO VERY IMPORTANT
-  .grid-container
-    .rank-box-wrapper
-      .rank-sexy.rank-box
-        - question.answers.each do |answer|
-          .rank-cell data-value=(answer.id) class=( @user_style_profile.selected?(answer) ? 'selected' : '' )
-            / .checkmark.checkmark-lg
-            .rank-item class="rank-sexy-item-#{ answer.value } #{ @user_style_profile.selected?(answer) ? 'selected' : '' }"
-    .row
-      .col-6.text-right = link_to 'Back', '#', class: 'btn btn-default btn-block', data: { action: 'previous' }
-      .col-6 = link_to 'Next', '#', class: 'btn btn-primary btn-block', data: { action: 'next' }
+      .rank-box-wrapper
+        .rank-sexy.rank-box
+          - question.answers.each do |answer|
+            .rank-cell data-value=(answer.id) class=( @user_style_profile.selected?(answer) ? 'selected' : '' )
+              / .checkmark.checkmark-lg
+              .rank-item class="rank-sexy-item-#{ answer.value } #{ @user_style_profile.selected?(answer) ? 'selected' : '' }"
+      .row
+        .col-6.col-next = link_to 'Next', '#', class: 'btn btn-primary btn-block', data: { action: 'next' }
+        .col-6.col-prev.text-right = link_to 'Back', '#', class: 'btn btn-default btn-block', data: { action: 'previous' }
 / @end Question 9/11
 / ------------------
