--- a/engines/style_quiz/app/views/style_quiz/questions/signup.html.slim
+++ b/engines/style_quiz/app/views/style_quiz/questions/signup.html.slim
@@ -1,31 +1,32 @@
 / Signup question
 - date_format = I18n.t('date_format.backend')
 form.quiz-section id="#{ question.name }-question"
-  .quiz-section-title
-    .grid-container
-      h4.quiz-section-number Question #{ question_position }/#{ question_total }
-      h2 Tell us a bit about yourself.
-  .quiz-user-info
-    .grid-container
-      .row
-        .col-6.col-middle.text-center
-          .form-centered.text-left
-            .form-group
-              label Full NAME
-              input.form-control type="text" name="fullname" placeholder="Mary Smith" value=(@user_style_profile.fullname) required="required"
-            .form-group
-              label date of birth
-              input.form-control type="text" name="birthday" placeholder=(I18n.t('date_format.frontend')) value=(@user_style_profile.birthday.try(:strftime, date_format)) required="required"
-            .form-group
-              label email address
-              input.form-control type="email" name="email" placeholder="email@example.com" value=(@user_style_profile.email) required="required"
-            input.btn.btn-block.btn-primary type="submit" value="Next" data-action="next"
-        .col-6.col-middle.text-center
-          .form-centered.facebook-box
-            div data-action="import-from-fb"
-              h2 Import my details from Facebook.
-              .btn.btn-facebook 
-                ' &nbsp;
-            - unless spree_user_signed_in?
-              .or or
-              = link_to 'Login', new_spree_user_session_path, data: { action: 'login' }, class: 'btn btn-primary btn-login'
+  .quiz-section-window
+    .quiz-section-title
+      .grid-container
+        h4.quiz-section-number Question #{ question_position }/#{ question_total }
+        h2 Tell us a bit about yourself.
+    .quiz-user-info
+      .grid-container
+        .row
+          .col-6.col-middle.text-center
+            .form-centered.text-left
+              .form-group
+                label Full NAME
+                input.form-control type="text" name="fullname" placeholder="Mary Smith" value=(@user_style_profile.fullname) required="required"
+              .form-group
+                label date of birth
+                input.form-control type="text" name="birthday" placeholder=(I18n.t('date_format.frontend')) value=(@user_style_profile.birthday.try(:strftime, date_format)) required="required"
+              .form-group
+                label email address
+                input.form-control type="email" name="email" placeholder="email@example.com" value=(@user_style_profile.email) required="required"
+              input.btn.btn-block.btn-primary type="submit" value="Next" data-action="next"
+          .col-6.col-middle.text-center
+            .form-centered.facebook-box
+              div data-action="import-from-fb"
+                h2 Import my details from Facebook.
+                .btn.btn-facebook 
+                  ' &nbsp;
+              - unless spree_user_signed_in?
+                .or or
+                = link_to 'Login', new_spree_user_session_path, data: { action: 'login' }, class: 'btn btn-primary btn-login'
