--- a/app/assets/stylesheets/redesign/_mixins.css.scss
+++ b/app/assets/stylesheets/redesign/_mixins.css.scss
@@ -48,3 +48,11 @@
   -webkit-transition: $transition;
   transition:         $transition;
 }
+
+
+@mixin border-radius($radius) {
+  -webkit-border-radius: $radius;
+     -moz-border-radius: $radius;
+      -ms-border-radius: $radius;
+          border-radius: $radius;
+}
