--- a/app/views/checkout/v1/spree/checkout/_payment_step.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_payment_step.html.slim
@@ -1,3 +1,7 @@
+/ TODO - Remove - GB 2015.08.14
+/ YES, you see correctly that I am leaving dead code the codebase, naughty.
+/ Please See _payment_step_v2.html.slim
+/
 h2.checkout-section-title 3. Payment Details
 - if current_step.eql?('payment')
   - if @credit_card_gateway.is_a?(Spree::Gateway::Pin)
