--- a/app/views/checkout/v1/spree/checkout/edit.html.slim
+++ b/app/views/checkout/v1/spree/checkout/edit.html.slim
@@ -30,7 +30,8 @@
           = render 'address_step', current_step: current_step
 
         .checkout-step data-name="payment"
-          = render 'payment_step', current_step: current_step
+          - if current_step.eql?('payment')
+            = render 'payment_step_v2', current_step: current_step
 
       .col-md-4
         - cart = UserCart::UserCartResource.new(order: current_order).read
