--- a/app/views/checkout/v1/spree/checkout/edit.html.slim
+++ b/app/views/checkout/v1/spree/checkout/edit.html.slim
@@ -13,12 +13,12 @@
               = image_tag 'logo/logo-mobile.svg', alt: 'Fame & Partners', width: '78', height: '59'
             ' Secure checkout
           ul.support-options.list-inline
-            li
+            li.live-chat
               a href='javascript:$zopim.livechat.window.show()'
-                i.live-chat
+                i.icon-live-chat
                 ' Live Chat
-            li
-              i.support-telephone
+            li.support-telephone
+              i.icon-support-telephone
               = support_telephone
 
         .checkout-breadcrumbs
