Hide support options temporarily on mobile

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -4,6 +4,7 @@
 @import 'redesign/vars';
 @import 'redesign/mixins';
 @import 'redesign/extras/helpers';
+@import '_media_queries';
 
 @import 'redesign/libs/chosen';
 @import 'redesign/extras/chosen_override';
