--- a/app/assets/stylesheets/redesign/_checkout_v2.css.scss
+++ b/app/assets/stylesheets/redesign/_checkout_v2.css.scss
@@ -49,6 +49,10 @@ $order-summary-bg: #f7f7f9;
     }
 
     .support-options {
+      @include mobile {
+        // TODO - Put on bottom on screen as in design.
+        display: none;
+      }
       margin:0;
       float:right !important;
       line-height: 60px;
