Add manual test script to specs

--- a/app/views/checkout/v1/spree/checkout/_address_step.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_address_step.html.slim
@@ -37,6 +37,6 @@
 
     .row
       .col-md-6.form-group
-        button.btn.btn-block.btn-md.btn-black data-loading='Saving...'
+        button.btn.btn-block.btn-md.btn-black name='pay_securely' data-loading='Saving...'
           i.icon.icon-lock
           ' Pay Securely
