--- a/app/assets/stylesheets/redesign/_checkout_v2.css.scss
+++ b/app/assets/stylesheets/redesign/_checkout_v2.css.scss
@@ -98,16 +98,20 @@ $order-summary-bg: #f7f7f9;
       }
     }
     #comodo{
-      -webkit-filter: grayscale(100%);
-      filter: grayscale(100%);
       margin-top: -10px;
       margin-right: 12px;
+      img{
+        width: 175px;
+      }
       @media (max-width: 375px){
-        margin-top: -20px;
+        margin-top: 25px;
         margin-right: 5px;
+        img{
+          width: 100px;
+        }
       }
       @media (max-width: 320px){
-        margin-top: 25px;
+        margin-top: 30px;
         margin-right: 5px;
       }
     }
