--- a/app/assets/stylesheets/redesign/_login.css.scss
+++ b/app/assets/stylesheets/redesign/_login.css.scss
@@ -1,3 +1,10 @@
+.login .container .row .checkout-section-title{
+  background-color: #f6e2d5;
+  padding: 15px;
+  text-transform: uppercase;
+  font-size: 14px;
+  margin-bottom: 30px;
+}
 .login-header, .sign-up-header, .password-new-header {
 
   h1 {
