fix account setting page ajax requests
I fix 3 tabs in account setting page

--- a/app/views/users/orders/index.js.erb
+++ b/app/views/users/orders/index.js.erb
@@ -1,8 +1,8 @@
 html = '<%=j  render(template: 'users/orders/index.html') %>';
 
-$('body > .user-account-page-title').remove();
-$('body > .page-title').remove();
-$('body > .page-content').replaceWith(html);
+$('body .user-account-page-title').remove();
+$('body .page-title').remove();
+$('body .page-content').replaceWith(html);
 
 window.setCurrentPath('<%= user_orders_path %>')
 $(window).off('popstate').one('popstate', function() {
