--- a/app/views/users/wishlists_items/index.js.erb
+++ b/app/views/users/wishlists_items/index.js.erb
@@ -1,7 +1,7 @@
 html = '<%=j  render(template: 'users/wishlists_items/index.html') %>';
 
-$('body > .user-account-page-title').remove();
-$('body > .page-content').replaceWith(html);
+$('body .user-account-page-title').remove();
+$('body .page-content').replaceWith(html);
 
 window.setCurrentPath('<%= wishlist_path %>')
 $(window).off('popstate').one('popstate', function() {
