--- a/app/views/users/orders/show.js.erb
+++ b/app/views/users/orders/show.js.erb
@@ -1,8 +1,8 @@
 html = '<%=j  render(template: 'spree/orders/show') %>';
 
-$('body > .user-account-page-title').remove();
-$('body > .page-title').remove();
-$('body > .page-content').replaceWith(html);
+$('body .user-account-page-title').remove();
+$('body .page-title').remove();
+$('body .page-content').replaceWith(html);
 
 window.setCurrentPath('<%= user_order_path(@order) %>');
 $(window).off('popstate').one('popstate', function() {
