--- a/app/views/users/style_profiles/show.js.erb
+++ b/app/views/users/style_profiles/show.js.erb
@@ -1,7 +1,8 @@
 html = '<%=j  render(template: 'users/style_profiles/show.html') %>';
 
-$('body > .user-account-page-title').remove();
-$('body > .page-content').replaceWith(html);
+$('body .user-account-page-title').remove();
+$('body .page-title').remove();
+$('body .page-content').replaceWith(html);
 
 <% if @title.present? %>
   document.title = '<%=  @title %>';
