prevent user clicking a checkout link before JS load

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -120,7 +120,7 @@ ruby:
                             button.invis-fix Enter
 
             li#cart-trigger.menu-item
-              = link_to spree.checkout_path, class: 'menu-item--link' do
+              = link_to '#', class: 'menu-item--link' do
                 span
                   = image_tag "_icons/shopping-bag.svg", class: 'nav-mobile-logo', alt: 'Cart'
                   span#cart-item-count 0
