--- a/app/views/layouts/redesign/_google_tag_manager.html.erb
+++ b/app/views/layouts/redesign/_google_tag_manager.html.erb
@@ -17,7 +17,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <% if flash[:commerce_tracking] || params[:force_tracking] && @marketing_order.present? %>
   <script>
     dataLayer.push({
-      "event": "completedOrder",
+      "event":               "completedOrder",
+      "transactionId":       "<%= @marketing_order.number %>",
       "transactionCurrency": "<%= @marketing_order.currency %>",
       "transactionTotal"   : <%= @marketing_order.total_amount %>
     });
