--- a/app/views/checkout/v1/spree/checkout/_email_login.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_email_login.html.slim
@@ -19,7 +19,7 @@
       label Password
       .input-group
         = text_field_tag 'password', nil, class: 'form-control form-control-md', type: 'password'
-        span.input-group-btn
+        span.input-group-addon
           = link_to 'log in', login_path, class: 'btn btn-block btn-black btn-md open-login-popup'
 
     .col-md-6.form-group
