Use correct bootstrap input-group-btn helper class

--- a/app/views/checkout/v1/spree/checkout/_order_summary.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_order_summary.html.slim
@@ -55,7 +55,7 @@ ruby:
     label.invisible for="#promo-code" Promo Code
     .input-group
       input.form-control.form-control-md#promo-code type="text" placeholder="Discount code"
-      span.input-group-addon
+      span.input-group-btn
         button.btn.btn-block.btn-black.btn-md.promo-code-apply Apply
 
   p
