--- a/app/views/checkout/v1/spree/checkout/_payment_step_v2.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_payment_step_v2.html.slim
@@ -35,6 +35,11 @@ p All transactions are secure and encrypted. Credit card information is never st
         .panel-body
           = paypal_express_button
 
+.row
+  a#comodo.visible-xs href="#" style="text-decoration:none;margin-bottom:35px"
+    center
+      img alt="SSL" src="https://www.comodo.com/products/download/download.php?f=comodo-ssl.png&key5sk1=0c484981a4fa93e6a954ebfe951eec1ca2ce5a7e" style="border: 0px;width:30%"
+
 p
     ' By making this purchase you are agreeing to the Fame & Partners
     a href="/terms.html" Term & Conditions.
