--- a/app/views/checkout/v1/spree/checkout/edit.html.slim
+++ b/app/views/checkout/v1/spree/checkout/edit.html.slim
@@ -26,7 +26,7 @@
             li class=('active' if current_step.eql?('address')) Your information
             li class=('active' if current_step.eql?('payment')) Payment Method
             a#comodo.hidden-xs href="#" style="text-decoration:none;float:right"
-              img alt="SSL" src="https://www.comodo.com/products/download/download.php?f=comodo-ssl.png&key5sk1=0c484981a4fa93e6a954ebfe951eec1ca2ce5a7e" style="border: 0px;"
+              img alt="SSL" src="assets/comodo-ssl.png" style="border: 0px;"
 
         .checkout-step data-name="address"
           = render 'address_step', current_step: current_step
