--- a/app/views/checkout/v1/spree/checkout/_address_step.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_address_step.html.slim
@@ -44,6 +44,6 @@
     .row
       a#comodo.visible-xs href="#" style="text-decoration:none;margin-bottom:35px"
         center
-          img alt="SSL" src="https://www.comodo.com/products/download/download.php?f=comodo-ssl.png&key5sk1=0c484981a4fa93e6a954ebfe951eec1ca2ce5a7e" style="border: 0px;width:30%"
+          img alt="SSL" src="assets/comodo-ssl.png" style="border: 0px;width:30%"
 
 
