--- a/app/views/layouts/redesign/_head.html.slim
+++ b/app/views/layouts/redesign/_head.html.slim
@@ -32,6 +32,7 @@ script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1
   = render '/shared/tracking/google_analytics'
   = render '/shared/zopim'
   = render '/shared/hotjar'
+  = render '/shared/optimizely'
 
 /[if lt IE 9]
   = javascript_include_tag 'html5.js'
