--- a/app/assets/stylesheets/redesign/product/_fit_guide.css.scss
+++ b/app/assets/stylesheets/redesign/product/_fit_guide.css.scss
@@ -1,17 +1,7 @@
 // - Vars
-$fg-screen-lg: 1230px;
+$fg-screen-lg: 1070px;
 $fg-screen-md: 640px;
 $fg-screen-sm: 480px;
-
-%schema-text {
-  position: absolute;
-  width: 150px;
-  h2, p { 
-    margin: 0;
-    line-height: 1;
-    color: #000;
-  }
-}
 
 .vex-theme-flat-attack.fit-guide-dialog {
   background-color: rgba(0, 0, 0, 0.4);
@@ -22,18 +12,13 @@ $fg-screen-sm: 480px;
     width: 96%;
     max-width: 1230px;
     min-height: 600px;
-    background: url('_popups/fit-guide-bg.jpg') left top no-repeat #e7e6e5;
+    background: url('_popups/fit-guide-bg-desktop.jpg') left top no-repeat #e7e6e5;
     background-size: cover;
     @media (max-width: $fg-screen-lg) {
-      background: url('_popups/fit-guide-bg-2.jpg') left 63px no-repeat #e7e6e5;
-      background-size: contain;
+      background: #e7e6e5;
       width: auto;
       margin-left: 10px;
       margin-right: 10px;
-    }
-    @media (max-width: $fg-screen-md) {
-      background: #e7e6e5;
-      overflow-x: hidden;
     }
   }
 
@@ -52,171 +37,7 @@ $fg-screen-sm: 480px;
       height: 17px;
     }
   }
-  .row {margin: 0;}
-  .col {
-    @media (min-width: $fg-screen-lg) {
-      float: left;
-      width: 50%;
-    }
-  }
 
-  .fit-guide-corner {
-    position: absolute;
-    top: 0;
-    left: 0;
-    @media (max-width: $fg-screen-lg) {
-      position: relative;
-      z-index: 0;
-      background-color: $pink-bg;
-      padding-top: 10px;
-      padding-bottom: 10px;
-    }
-    &:after {
-      content: '';
-      display: block;
-      position: absolute;
-      z-index: 0;
-      left: 0;
-      top: 0;
-      width: 0;
-      height: 0;
-      border-style: solid;
-      border-width: 180px 180px 0 0;
-      border-color: $pink-bg rgba(255, 255, 255, 0) rgba(255, 255, 255, 0) rgba(255, 255, 255, 0);
-      @media (max-width: $fg-screen-lg) {
-        display: none;
-      }
-    }
-    .fit-guide-corner-text {
-      text-align: center;
-      margin-top: 34px;
-      margin-left: -17px;
-      position: relative;
-      z-index: 1;
-      transform: rotate(-45deg);
-      h2 { 
-        font-size: 13px;
-        margin-bottom: 5px;
-      }
-      p {
-        font-size: 12px;
-        margin-bottom: 0;
-      }
-      
-      @media (max-width: $fg-screen-lg) {
-        transform: rotate(0deg);
-        margin: 0;
-        h2 { font-size: 18px;}
-        p { font-size: 14px;}
-        br { display: none;}
-      }
-      
-      @media (max-width: $fg-screen-sm) {
-        h2 { font-size: 15px;}
-        p { font-size: 12px;}
-      }
-    }
-  }
-
-  .fit-guide-text {
-    padding: 20px 20px 20px 50px; 
-    @media (max-width: $fg-screen-lg) {
-      padding: 10px;
-    }
-    @media (max-width: $fg-screen-md) {
-      padding-top: 20px;
-    }
-  }
-
-  .fit-guide-schema {
-    max-width: 80%;
-    height: 0;
-    padding-bottom: 94%;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    transform-origin: 0 0;
-    @media (max-width: $fg-screen-lg) {
-      padding-bottom: 78%;
-      margin-bottom: 90px;
-    }
-    @media (max-width: $fg-screen-md) {
-      background: url('_popups/fit-guide-bg-2.jpg') left top no-repeat #e7e6e5;
-      background-size: 620px 547px;
-      max-width: none;
-      padding-bottom: 0;
-      margin-bottom: 0;
-      width: 620px;
-      height: 547px;
-    }
-
-    .line-bust-text {
-      @extend %schema-text;
-      top: 14%;
-      left: 13%;
-      @media (max-width: $fg-screen-lg) {
-        left: 0;
-      }
-      @media (max-width: $fg-screen-md) { 
-        top: 11%;
-        left: 10%;
-      }
-    }
-    .line-waist-text {
-      @extend %schema-text;
-      top: 22%;
-      left: 83%;
-      @media (max-width: $fg-screen-lg) {
-        top: 23%;
-        left: 76%;
-      }
-      @media (max-width: $fg-screen-md) { 
-        top: 20%;
-        left: 72%;
-      }
-    }
-    .line-hips-text {
-      @extend %schema-text;
-      top: 30%;
-      left: 6%;
-      @media (max-width: $fg-screen-lg) {
-        top: 41%;
-        left: -1%;
-      }
-      @media (max-width: $fg-screen-md) {
-        top: 36%;
-        left: 8%;
-      }
-    }
-    .line-dress-text {
-      @extend %schema-text;
-      width: 160px;
-      top: 68.5%;
-      left: 0;
-      @media (max-width: $fg-screen-lg) {
-        top: 74.5%;
-        left: 2%;
-      }
-      @media (max-width: $fg-screen-md) {
-        top: 65.5%;
-        left: 10%;
-      }
-    }
-    .line-skirt-text {
-      @extend %schema-text;
-      top: 67.2%;
-      left: 89%;
-      @media (max-width: $fg-screen-lg) {
-        top: 74.5%;
-        left: 74%;
-      }
-      @media (max-width: $fg-screen-md) {
-        top: 65.5%;
-        left: 67%;
-      }
-    }
-  }
-  
   h2 {
     margin-top: 0;
     margin-bottom: 15px;
@@ -230,6 +51,66 @@ $fg-screen-sm: 480px;
     line-height: 1.4;
   }
 
+  .square {
+    height: 0;
+    width: 100%;
+    padding-bottom: 100%;
+    @media (max-width: $fg-screen-lg) {
+      background: url('_popups/fit-guide-bg-phone.jpg')no-repeat;
+      background-size: cover;
+    }
+  }
+
+  .row {
+    margin: 0;
+  }
+
+  .col {
+    @media (min-width: $fg-screen-lg) {
+      float: left;
+      width: 50%;
+      min-height: 1px;
+    }
+  }
+
+  .fit-guide-corner-img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 175px;
+    width: 175px;
+    background: url('_popups/fit-guide-corner.png') no-repeat;
+    background-size: cover;
+    @media (max-width: $fg-screen-lg) {
+      display: none;
+    }
+  }
+
+  .fit-guide-corner-text {
+    background-color: $pink-bg;
+    text-align: center;
+    padding: 10px 20px;
+
+    @media (min-width: $fg-screen-lg + 1) {
+      display: none;
+    }
+    
+    h2 { 
+      font-size: 14px;
+      margin-bottom: 5px;
+    }
+    p {
+      font-size: 13px;
+      margin-bottom: 0;
+    }
+  }
+
+  .fit-guide-text {
+    padding: 20px 20px 20px 50px; 
+    @media (max-width: $fg-screen-lg) {
+      padding: 20px 10px 10px;
+    }
+  }
   
   .size-guide {
     font-size: 14px;
@@ -260,77 +141,5 @@ $fg-screen-sm: 480px;
     td.sub-heading:nth-child(3) {
       display: none !important;
     }
-  }
-
-
-  // table {
-  //   width: 95%;
-  //   margin-left: auto;
-  //   margin-right: auto;
-  // }
-  
-  // .size-alert {
-  //   background-color: #eeddf0;
-  //   padding:0.5em 1.5em 0.5em 1.5em;
-  //   margin-bottom:1em;;
-  // }
-
-  // .table > thead > tr > th {
-  //   border-bottom: none;
-  // }
-
-  // img {
-  //   width: 217px;
-  //   display: block;
-  // }
-
-  // h6 {
-  //   font-size:1em;
-  // }
-
-  
-
-  // th {
-  //   padding-left: 10px
-  // }
-
-  // thead {
-  //   text-transform: uppercase;
-  //   background-color:#f5f5f5;
-
-  // }
-
-  // td.sub-heading {
-  //   font-size:0.666666em;
-  //   font-weight:400;
-  //   font-size: 15px;
-  // }
-
-  // td
-  //  {
-  //   border-top: none;
-  //   font-size:14px;
-  //   font-weight:400;
-  //   text-align: center;
-  // }
-
-  @media screen and (max-width: 991px){
-    // .vex-content {
-    //   width:90%;
-    //   height:90%;
-    //   margin-bottom: 62px;
-    // }
-  }
-  @media screen and (max-width: 480px){
-    // .vex-content {
-    //   width:100%;
-    //   height:100%;
-    //   margin-bottom: 62px;
-
-    //   h2 {
-    //     padding-right: 50px;
-    //     padding-left: 50px;
-    //   }
-    // }
   }
 }
